Fix dependencies on hard-coded home directory pathnames. Make demo.sh detect the correct directory path, and use increased memory options.